force-app/main/default/objects/Toronto_Address_Points__x/Toronto_Address_Points__x.object-meta.xml
<CustomObject>
    <description>Toronto_Address_Points</description>
    <externalDataSource>Toronto_Parcels</externalDataSource>
    <externalName>Toronto_Address_Points</externalName>
    <label>Toronto_Address_Points</label>
    <pluralLabel>Toronto_Address_Points</pluralLabel>
</CustomObject>