force-app/main/default/objects/Toronto_Address_Points__x/fields/ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>ADDRESS__c</fullName>
    <externalDeveloperName>ADDRESS</externalDeveloperName>
    <label>ADDRESS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>