force-app/main/default/objects/Toronto_Address_Points__x/fields/ARC_SIDE__c.field-meta.xml
<CustomField>
    <fullName>ARC_SIDE__c</fullName>
    <externalDeveloperName>ARC_SIDE</externalDeveloperName>
    <label>ARC_SIDE</label>
    <length>1</length>
    <type>Text</type>
</CustomField>