force-app/main/default/objects/Toronto_Address_Points__x/fields/CLASS__c.field-meta.xml
<CustomField>
    <fullName>CLASS__c</fullName>
    <externalDeveloperName>CLASS</externalDeveloperName>
    <label>CLASS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>