force-app/main/default/objects/Toronto_Address_Points__x/fields/DISTANCE__c.field-meta.xml
<CustomField>
    <fullName>DISTANCE__c</fullName>
    <externalDeveloperName>DISTANCE</externalDeveloperName>
    <label>DISTANCE</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>