force-app/main/default/objects/Toronto_Address_Points__x/fields/FCODE__c.field-meta.xml
<CustomField>
    <fullName>FCODE__c</fullName>
    <externalDeveloperName>FCODE</externalDeveloperName>
    <label>FCODE</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>