force-app/main/default/objects/Toronto_Address_Points__x/fields/FCODE_DES__c.field-meta.xml
<CustomField>
    <fullName>FCODE_DES__c</fullName>
    <externalDeveloperName>FCODE_DES</externalDeveloperName>
    <label>FCODE_DES</label>
    <length>254</length>
    <type>Text</type>
</CustomField>