force-app/main/default/objects/Toronto_Address_Points__x/fields/FID__c.field-meta.xml
<CustomField>
    <fullName>FID__c</fullName>
    <externalDeveloperName>FID</externalDeveloperName>
    <label>FID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>