force-app/main/default/objects/Toronto_Address_Points__x/fields/GEO_ID__c.field-meta.xml
<CustomField>
    <fullName>GEO_ID__c</fullName>
    <externalDeveloperName>GEO_ID</externalDeveloperName>
    <label>GEO_ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>