force-app/main/default/objects/Toronto_Address_Points__x/fields/HINUM__c.field-meta.xml
<CustomField>
    <fullName>HINUM__c</fullName>
    <externalDeveloperName>HINUM</externalDeveloperName>
    <label>HINUM</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>