force-app/main/default/objects/Toronto_Address_Points__x/fields/HINUMSUF__c.field-meta.xml
<CustomField>
    <fullName>HINUMSUF__c</fullName>
    <externalDeveloperName>HINUMSUF</externalDeveloperName>
    <label>HINUMSUF</label>
    <length>3</length>
    <type>Text</type>
</CustomField>