force-app/main/default/objects/Toronto_Address_Points__x/fields/LATITUDE__c.field-meta.xml
<CustomField>
    <fullName>LATITUDE__c</fullName>
    <externalDeveloperName>LATITUDE</externalDeveloperName>
    <label>LATITUDE</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>