force-app/main/default/objects/Toronto_Address_Points__x/fields/LFNAME__c.field-meta.xml
<CustomField>
    <fullName>LFNAME__c</fullName>
    <externalDeveloperName>LFNAME</externalDeveloperName>
    <label>LFNAME</label>
    <length>110</length>
    <type>Text</type>
</CustomField>