force-app/main/default/objects/Toronto_Address_Points__x/fields/LINK__c.field-meta.xml
<CustomField>
    <fullName>LINK__c</fullName>
    <externalDeveloperName>LINK</externalDeveloperName>
    <label>LINK</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>