force-app/main/default/objects/Toronto_Address_Points__x/fields/LONGITUDE__c.field-meta.xml
<CustomField>
    <fullName>LONGITUDE__c</fullName>
    <externalDeveloperName>LONGITUDE</externalDeveloperName>
    <label>LONGITUDE</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>