force-app/main/default/objects/Toronto_Address_Points__x/fields/LONUM__c.field-meta.xml
<CustomField>
    <fullName>LONUM__c</fullName>
    <externalDeveloperName>LONUM</externalDeveloperName>
    <label>LONUM</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>