force-app/main/default/objects/Toronto_Address_Points__x/fields/LONUMSUF__c.field-meta.xml
<CustomField>
    <fullName>LONUMSUF__c</fullName>
    <externalDeveloperName>LONUMSUF</externalDeveloperName>
    <label>LONUMSUF</label>
    <length>3</length>
    <type>Text</type>
</CustomField>