force-app/main/default/objects/Toronto_Address_Points__x/fields/MAINT_STAG__c.field-meta.xml
<CustomField>
    <fullName>MAINT_STAG__c</fullName>
    <externalDeveloperName>MAINT_STAG</externalDeveloperName>
    <label>MAINT_STAG</label>
    <length>10</length>
    <type>Text</type>
</CustomField>