force-app/main/default/objects/Toronto_Address_Points__x/fields/MUN_NAME__c.field-meta.xml
<CustomField>
    <fullName>MUN_NAME__c</fullName>
    <externalDeveloperName>MUN_NAME</externalDeveloperName>
    <label>MUN_NAME</label>
    <length>15</length>
    <type>Text</type>
</CustomField>