force-app/main/default/objects/Toronto_Address_Points__x/fields/NAME__c.field-meta.xml
<CustomField>
    <fullName>NAME__c</fullName>
    <externalDeveloperName>NAME</externalDeveloperName>
    <label>NAME</label>
    <length>200</length>
    <type>Text</type>
</CustomField>