force-app/main/default/objects/Toronto_Address_Points__x/fields/OBJECTID__c.field-meta.xml
<CustomField>
    <fullName>OBJECTID__c</fullName>
    <externalDeveloperName>OBJECTID</externalDeveloperName>
    <label>OBJECTID</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>