force-app/main/default/objects/Toronto_Address_Points__x/fields/WARD_NAME__c.field-meta.xml
<CustomField>
    <fullName>WARD_NAME__c</fullName>
    <externalDeveloperName>WARD_NAME</externalDeveloperName>
    <label>WARD_NAME</label>
    <length>40</length>
    <type>Text</type>
</CustomField>