force-app/main/default/objects/Toronto_Address_Points__x/fields/X__c.field-meta.xml
<CustomField>
    <fullName>X__c</fullName>
    <externalDeveloperName>X</externalDeveloperName>
    <label>X</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>