force-app/main/default/objects/Toronto_Address_Points__x/fields/Y__c.field-meta.xml
<CustomField>
    <fullName>Y__c</fullName>
    <externalDeveloperName>Y</externalDeveloperName>
    <label>Y</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>